Update title and welcome message in index.html

--- a/index.html
+++ b/index.html
@@ -2,12 +2,12 @@
 <html>
 <head>
   <meta charset="UTF-8">
-  <title>Lawrence</title>
+  <title>Lhon</title>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
 
-  <h1>Welcome</h1>
+  <h1>Welcome visitor</h1>
 
   <div class="grid" id="photoGrid"></div>
 
