Update about text in about.html

--- a/about.html
+++ b/about.html
@@ -9,7 +9,7 @@
 
   <h1>About Me</h1>
 
-  <p>Write your about text here.</p>
+  <p>Hola soy lawrence y me gusta mucho Colombia</p>
 
   <a href="index.html">Home</a>
 
