--- a/index.html
+++ b/index.html
@@ -15,7 +15,8 @@
     <a href="about.html">About</a> |
     <a href="contact.html">Contact</a>
   </nav>
-
+<section class="grid" id="photo-grid"></section>
+<script src="script.js"></script>
   <script src="script.js"></script>
 </body>
 </html>
