--- a/index.html
+++ b/index.html
@@ -11,10 +11,11 @@
 
   <div class="grid" id="photoGrid"></div>
 
-  <nav>
-    <a href="about.html">About</a> |
-    <a href="contact.html">Contact</a>
-  </nav>
+  <section class="footer-links">
+  <a href="contact.html">Contact</a>
+  <a href="about.html">About</a>
+</section>
+  
 <section class="grid" id="photo-grid"></section>
 <script src="script.js"></script>
   <script src="script.js"></script>
