--- a/index.html
+++ b/index.html
@@ -1,14 +1,25 @@
+<!DOCTYPE html>
+<html>
+<head>
+  <meta charset="UTF-8">
+  <title>Lhon</title>
+  <link rel="stylesheet" href="style.css">
+</head>
 <body>
 
   <h1>Welcome visitor</h1>
 
+  <!-- ESTE ES EL GRID DONDE SALEN LAS FOTOS -->
   <section class="grid" id="photo-grid"></section>
 
+  <!-- LINKS DE CONTACT / ABOUT ABAJO -->
   <section class="footer-links">
     <a href="contact.html">Contact</a>
     <a href="about.html">About</a>
   </section>
 
+  <!-- JAVASCRIPT -->
   <script src="script.js"></script>
 
 </body>
+</html>
